[package]
name = "bb_save_editor_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
env_logger = "0.10"
serde_json = "1.0.96"
bb_save_access = { path = "SaveDataDecrypter" }